--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.luv2code.springdemo</groupId>
-    <artifactId>spring-crm-rest</artifactId>
-    <version>1.0.0</version>
+    <groupId>pl.edu.neg</groupId>
+    <artifactId>crm-rest-api</artifactId>
+    <version>1.0.6</version>
     <packaging>war</packaging>
 
     <properties>
